--- a/25.1 Book Manager-update/package.json
+++ b/25.1 Book Manager-update/package.json
@@ -17,10 +17,9 @@
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "firebase": "^7.14.2",
         "lowdb": "^1.0.0",
-        "mailgun-js": "^0.22.0",
         "md5": "^2.2.1",
+        "mongoose": "^5.9.14",
         "multer": "^1.4.2",
         "pug": "^2.0.4",
         "shortid": "^2.2.15"
